--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ main section:not(:last-child) {
 }
 
 .fab {
-  border: 1px solid white;
+  border: 1px solid rgb(80, 76, 76);
   border-radius: 50%;
   font-size: 1.5em;
   width: 1.5em;
